# sf_dot

./: .gitignore  README.md  pyproject.toml
data/: drivers.csv  ownerships.csv  vehicles.csv
data/sql/: 1.sql  2.sql  3.sql  4.sql  5.sql  6.sql
sf_dot/: __main__.py
